// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiToken is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--light ouiToken--small testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    aria-label="aria-label"
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color can be a custom hex 1`] = `
<span
  class="ouiToken ouiToken--circle ouiToken--dark ouiToken--small"
  style="background-color:#FF0000;color:#000000"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis0 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis0 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis1 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis1 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis2 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis2 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis3 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis3 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis4 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis4 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis5 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis5 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis6 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis6 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis7 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis7 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis8 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis8 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color ouiColorVis9 is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis9 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props color gray is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props fill dark is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--dark ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props fill light is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props fill none is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenAlias is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis3 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenAlias"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenAnnotation is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis5 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenAnnotation"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenArray is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis7 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenArray"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenBinary is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis4 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenBinary"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenBoolean is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis7 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenBoolean"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenClass is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis1 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenClass"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenCompletionSuggester is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis1 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenCompletionSuggester"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenConstant is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis0 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenConstant"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenDate is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis6 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenDate"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenDenseVector is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis2 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenDenseVector"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenElement is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis3 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenElement"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenEnum is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis3 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenEnum"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenEnumMember is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis7 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenEnumMember"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenEvent is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis4 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenEvent"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenException is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis0 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenException"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenField is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis0 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenField"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenFile is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--rectangle ouiToken--dark ouiToken--small"
>
  <span
    data-ouiicon-type="tokenFile"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenFlattened is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis7 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenFlattened"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenFunction is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis2 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenFunction"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenGeo is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis5 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenGeo"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenHistogram is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis6 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenHistogram"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenIP is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis9 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenIP"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenInterface is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis9 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenInterface"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenJoin is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis5 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenJoin"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenKey is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis5 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenKey"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenKeyword is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis9 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenKeyword"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenMethod is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis2 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenMethod"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenModule is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis4 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenModule"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenNamespace is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis1 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenNamespace"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenNested is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis2 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenNested"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenNull is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis2 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenNull"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenNumber is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis0 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenNumber"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenObject is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis3 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenObject"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenOperator is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis4 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenOperator"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenPackage is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis0 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenPackage"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenParameter is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis4 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenParameter"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenPercolator is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis6 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenPercolator"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenProperty is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis2 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenProperty"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenRange is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis4 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenRange"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenRankFeature is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis8 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenRankFeature"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenRankFeatures is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis3 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenRankFeatures"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenRepo is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis1 ouiToken--rectangle ouiToken--dark ouiToken--small"
>
  <span
    data-ouiicon-type="tokenRepo"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenSearchType is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis5 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenSearchType"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenShape is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis8 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenShape"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenString is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis1 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenString"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenStruct is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis0 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenStruct"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenSymbol is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis0 ouiToken--rectangle ouiToken--dark ouiToken--small"
>
  <span
    data-ouiicon-type="tokenSymbol"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenText is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis3 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenText"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenTokenCount is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis4 ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenTokenCount"
  />
</span>
`;

exports[`OuiToken props iconType as OuiTokenMapType tokenVariable is rendered 1`] = `
<span
  class="ouiToken ouiToken--ouiColorVis7 ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="tokenVariable"
  />
</span>
`;

exports[`OuiToken props shape circle is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props shape rectangle is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--rectangle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props shape square is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--square ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props size l is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--light ouiToken--large"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props size m is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--light ouiToken--medium"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props size s is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--light ouiToken--small"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;

exports[`OuiToken props size xs is rendered 1`] = `
<span
  class="ouiToken ouiToken--gray ouiToken--circle ouiToken--light ouiToken--xsmall"
>
  <span
    data-ouiicon-type="dot"
  />
</span>
`;
